--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "main": "./lib/epitech-norm-linter",
   "version": "1.2.0",
   "description": "Lint projects using your Epitech norminette",
+  "keywords": [
+    "lint",
+    "linter",
+    "c",
+    "epitech",
+    "norme",
+    "norminette",
+    "moulinette"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Arignir/Epitech-norm-linter.git"
@@ -18,9 +27,72 @@
     }
   },
   "dependencies": {
+    "atom-linter": "^2.0.5",
     "atom-package-deps": "^3.0.6"
   },
   "package-deps": [
     "linter"
-  ]
+  ],
+  "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/Arignir/Epitech-norm-linter/issues"
+  },
+  "homepage": "https://github.com/Arignir/Epitech-norm-linter#readme",
+  "_id": "epitech-norm-linter@1.2.0",
+  "_shasum": "5fd9a87f240572acaf93666fcb69bd24169576fb",
+  "_resolved": "file:../d-116014-3232-nlkt1e/package.tgz",
+  "_from": "../d-116014-3232-nlkt1e/package.tgz",
+  "_atomModuleCache": {
+    "version": 1,
+    "dependencies": [
+      {
+        "name": "atom-package-deps",
+        "version": "3.0.7",
+        "path": "node_modules/atom-package-deps/lib/main.js"
+      },
+      {
+        "name": "sb-callsite",
+        "version": "1.1.2",
+        "path": "node_modules/atom-package-deps/node_modules/sb-callsite/lib/main.js"
+      }
+    ],
+    "extensions": {
+      ".coffee": [
+        "lib/epitech-norm-linter.coffee",
+        "lib/provider.coffee"
+      ],
+      ".js": [
+        "node_modules/atom-package-deps/lib/helpers.js",
+        "node_modules/atom-package-deps/lib/main.js",
+        "node_modules/atom-package-deps/lib/view.js",
+        "node_modules/atom-package-deps/node_modules/sb-callsite/lib/main.js"
+      ],
+      ".json": [
+        "node_modules/atom-package-deps/node_modules/sb-callsite/package.json",
+        "node_modules/atom-package-deps/package.json",
+        "package.json"
+      ]
+    },
+    "folders": [
+      {
+        "paths": [
+          "lib",
+          "",
+          "spec"
+        ],
+        "dependencies": {
+          "atom-package-deps": "^3.0.6"
+        }
+      },
+      {
+        "paths": [
+          "node_modules/atom-package-deps/lib",
+          "node_modules/atom-package-deps"
+        ],
+        "dependencies": {
+          "sb-callsite": "^1.0.0"
+        }
+      }
+    ]
+  }
 }
